client/src/custom.scss
// Override default variables before the import
$primary: #7866D3;
$offcanvas-vertical-height: 75vh;

.h-90 {
  height: 90% !important;
}

.btn:focus, .btn:active {
  outline: none !important;
  box-shadow: none !important;
}

.border-dashed {
  border-style: dashed !important;
}

.subscriptionListCard {
  position: relative !important;
}

.offcanvasBorder {
  border-top-left-radius: 1rem !important;
  border-top-right-radius: 1rem !important;
}

.list-group-item-action:hover {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

#mainContainer {
  position: relative !important;
}

@media(max-width: 766px) {
  #mainContainer::after {
    content : "";
    position: absolute;
    bottom  : 5%;
    height  : 4px;
    width   : 90%;
    border-bottom: 3px solid black;
  }
}

@media(min-width: 767px) {  
  #mainContainer:before {
    content : "";
    position: absolute;
    left    : 0;
    bottom  : 50;
    height  : 90%;
    width   : 1px;
    border-left: 3px solid black;
  }

  .borderSubscriptionForm {
    border: 3px solid #7866D3;
    border-radius: 8px;
  }

  #nav-header {
    font-size: calc(1.375rem + 1.5vw) !important;
  }
}

// Import Bootstrap and its default variables
@import '~bootstrap/scss/bootstrap.scss';

